--- a/jupyternb/workbench.ipynb
+++ b/jupyternb/workbench.ipynb
@@ -2,77 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting numpy==1.24.3\n",
-      "  Using cached numpy-1.24.3.tar.gz (10.9 MB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[33 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
-      "  \u001b[31m   \u001b[0m   File \"/opt/anaconda3/envs/Workbench/lib/python3.12/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 389, in <module>\n",
-      "  \u001b[31m   \u001b[0m     main()\n",
-      "  \u001b[31m   \u001b[0m   File \"/opt/anaconda3/envs/Workbench/lib/python3.12/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 373, in main\n",
-      "  \u001b[31m   \u001b[0m     json_out[\"return_val\"] = hook(**hook_input[\"kwargs\"])\n",
-      "  \u001b[31m   \u001b[0m                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/opt/anaconda3/envs/Workbench/lib/python3.12/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 137, in get_requires_for_build_wheel\n",
-      "  \u001b[31m   \u001b[0m     backend = _build_backend()\n",
-      "  \u001b[31m   \u001b[0m               ^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/opt/anaconda3/envs/Workbench/lib/python3.12/site-packages/pip/_vendor/pyproject_hooks/_in_process/_in_process.py\", line 70, in _build_backend\n",
-      "  \u001b[31m   \u001b[0m     obj = import_module(mod_path)\n",
-      "  \u001b[31m   \u001b[0m           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/opt/anaconda3/envs/Workbench/lib/python3.12/importlib/__init__.py\", line 90, in import_module\n",
-      "  \u001b[31m   \u001b[0m     return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "  \u001b[31m   \u001b[0m            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 1387, in _gcd_import\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 1360, in _find_and_load\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 1310, in _find_and_load_unlocked\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 1387, in _gcd_import\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 1360, in _find_and_load\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 1331, in _find_and_load_unlocked\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 935, in _load_unlocked\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap_external>\", line 995, in exec_module\n",
-      "  \u001b[31m   \u001b[0m   File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/j_/1x324nw90s39y806_3svhvs40000gp/T/pip-build-env-3dpuf3xw/overlay/lib/python3.12/site-packages/setuptools/__init__.py\", line 16, in <module>\n",
-      "  \u001b[31m   \u001b[0m     import setuptools.version\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/j_/1x324nw90s39y806_3svhvs40000gp/T/pip-build-env-3dpuf3xw/overlay/lib/python3.12/site-packages/setuptools/version.py\", line 1, in <module>\n",
-      "  \u001b[31m   \u001b[0m     import pkg_resources\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/j_/1x324nw90s39y806_3svhvs40000gp/T/pip-build-env-3dpuf3xw/overlay/lib/python3.12/site-packages/pkg_resources/__init__.py\", line 2172, in <module>\n",
-      "  \u001b[31m   \u001b[0m     register_finder(pkgutil.ImpImporter, find_on_path)\n",
-      "  \u001b[31m   \u001b[0m                     ^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m AttributeError: module 'pkgutil' has no attribute 'ImpImporter'. Did you mean: 'zipimporter'?\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m \u001b[32mGetting requirements to build wheel\u001b[0m did not run successfully.\n",
-      "\u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n"
+      "Error al conectar: ('42000', '[42000] [Microsoft][ODBC Driver 18 for SQL Server][SQL Server]Cannot open database \"AlphaVantageDB\" requested by the login. The login failed. (4060) (SQLDriverConnect)')\n"
      ]
     }
    ],
-   "source": [
-    "!pip install numpy==1.24.3 scipy pandas ydata-profiling\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "import requests\n",
@@ -95,12 +35,12 @@
     "\n",
     "\n",
     "# Conexión a SQL Server\n",
-    "cadena_conexion = f'DRIVER=/opt/homebrew/lib/libmsodbcsql.18.dylib;' + \\\n",
-    "    f'SERVER={os.getenv('SQL_SERVER')},{os.getenv('SQL_PORT')};' + \\\n",
-    "    f'DATABASE={os.getenv('SQL_DATABASE')};' + \\\n",
-    "    f'UID={os.getenv('SQL_USER')};' + \\\n",
-    "    f'PWD={os.getenv('SQL_PASSWORD')};' + \\\n",
-    "    f'TrustServerCertificate=yes;'\n",
+    "cadena_conexion = 'DRIVER=/opt/homebrew/lib/libmsodbcsql.18.dylib;' + \\\n",
+    "    f\"SERVER={os.getenv('SQL_SERVER')},{os.getenv('SQL_PORT')};\" + \\\n",
+    "    f\"DATABASE={os.getenv('SQL_DATABASE')};\" + \\\n",
+    "    f\"UID={os.getenv('SQL_USER')};\" + \\\n",
+    "    f\"PWD={os.getenv('SQL_PASSWORD')};\" + \\\n",
+    "    \"TrustServerCertificate=yes;\"\n",
     "\n",
     "\n",
     "try:\n",
@@ -225,7 +165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "wb311",
    "language": "python",
    "name": "python3"
   },
